k8s/templates/private-operator/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campuscore
  annotations:
    replace-with-private-ingress-annotation-key.example.com/name: replace-with-private-ingress-annotation-value
    external-dns.alpha.kubernetes.io/hostname: replace-with-real-staging-host.example.com
spec:
  ingressClassName: replace-with-staging-ingress-class
  tls:
    - hosts:
        - replace-with-real-staging-host.example.com
      secretName: replace-with-real-staging-tls-secret
  rules:
    - host: replace-with-real-staging-host.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campuscore-nginx
                port:
                  number: 80
